removed a misplaced 'q' from the file

--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -15,7 +15,7 @@
 					    </tr>
 					    <tr>
                 <td class="title">Role:</td>
-						    <td class="field" style="font-size:70%"q>{{role}}</td>
+						    <td class="field" style="font-size:70%">{{role}}</td>
 					    </tr>
 				    </tbody>
 			    </table>
