--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -5,81 +5,76 @@
                 <h1>Revenues page!</h1>
                 
                 <h3>Filter</h3>
+
+                <form class='form-horizontal' onsubmit="return false">
+                    <fieldset>
         
-                <div class='control-group'>
-                    <label class='control-label'>Start Year</label>
-                    <div class='controls'>
-                        <select id='start_year'>
-                            <option value=''>--Select Year--</option>
-                            <option value='2008'>2008</option>
-                            <option value='2009'>2009</option>
-                            <option value='2010'>2010</option>
-                            <option value='2011'>2011</option>
-                            <option value='2012'>2012</option>
-                            <option value='2013'>2013</option>
-                            <option value='2014'>2014</option>
-                            <option value='2015'>2015</option>
-                            <option value='2016'>2016</option>
-                        </select>
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <label class='control-label'>Start Month</label>
-                    <div class='controls'>
-                        <select id='start_month'>
-                            <option value=''>--Select Month--</option>
-                            <option value='1'>January</option>
-                            <option value='2'>February</option>
-                            <option value='3'>March</option>
-                            <option value='4'>April</option>
-                            <option value='5'>May</option>
-                            <option value='6'>June</option>
-                            <option value='7'>July</option>
-                            <option value='8'>August</option>
-                            <option value='9'>September</option>
-                            <option value='10'>October</option>
-                            <option value='11'>November</option>
-                            <option value='12'>December</option>
-                        </select>
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <label class='control-label'>End Year</label>
-                    <div class='controls'>
-                        <select id='end_year'>
-                            <option value=''>--Select Year--</option>
-                            <option value='2008'>2008</option>
-                            <option value='2009'>2009</option>
-                            <option value='2010'>2010</option>
-                            <option value='2011'>2011</option>
-                            <option value='2012'>2012</option>
-                            <option value='2013'>2013</option>
-                            <option value='2014'>2014</option>
-                            <option value='2015'>2015</option>
-                            <option value='2016'>2016</option>
-                        </select>
-                    </div>
-                </div>
-                <div class='control-group'>
-                    <label class='control-label'>End Month</label>
-                    <div class='controls'>
-                        <select id='end_month'>
-                            <option value=''>--Select Month--</option>
-                            <option value='1'>January</option>
-                            <option value='2'>February</option>
-                            <option value='3'>March</option>
-                            <option value='4'>April</option>
-                            <option value='5'>May</option>
-                            <option value='6'>June</option>
-                            <option value='7'>July</option>
-                            <option value='8'>August</option>
-                            <option value='9'>September</option>
-                            <option value='10'>October</option>
-                            <option value='11'>November</option>
-                            <option value='12'>December</option>
-                        </select>
-                    </div>
-                </div>
+                        <div class='control-group'>
+                            <label class='control-label'>Start Date</label>
+                            <div class='controls'>
+                                <select id='start_year'>
+                                    <option value=''>--Select Year--</option>
+                                    <option value='2008'>2008</option>
+                                    <option value='2009'>2009</option>
+                                    <option value='2010'>2010</option>
+                                    <option value='2011'>2011</option>
+                                    <option value='2012'>2012</option>
+                                    <option value='2013'>2013</option>
+                                    <option value='2014'>2014</option>
+                                    <option value='2015'>2015</option>
+                                    <option value='2016'>2016</option>
+                                </select>
+                                <select id='start_month'>
+                                    <option value=''>--Select Month--</option>
+                                    <option value='1'>January</option>
+                                    <option value='2'>February</option>
+                                    <option value='3'>March</option>
+                                    <option value='4'>April</option>
+                                    <option value='5'>May</option>
+                                    <option value='6'>June</option>
+                                    <option value='7'>July</option>
+                                    <option value='8'>August</option>
+                                    <option value='9'>September</option>
+                                    <option value='10'>October</option>
+                                    <option value='11'>November</option>
+                                    <option value='12'>December</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class='control-group'>
+                            <label class='control-label'>End Date</label>
+                            <div class='controls'>
+                                <select id='end_year'>
+                                    <option value=''>--Select Year--</option>
+                                    <option value='2008'>2008</option>
+                                    <option value='2009'>2009</option>
+                                    <option value='2010'>2010</option>
+                                    <option value='2011'>2011</option>
+                                    <option value='2012'>2012</option>
+                                    <option value='2013'>2013</option>
+                                    <option value='2014'>2014</option>
+                                    <option value='2015'>2015</option>
+                                    <option value='2016'>2016</option>
+                                </select>
+                                <select id='end_month'>
+                                    <option value=''>--Select Month--</option>
+                                    <option value='1'>January</option>
+                                    <option value='2'>February</option>
+                                    <option value='3'>March</option>
+                                    <option value='4'>April</option>
+                                    <option value='5'>May</option>
+                                    <option value='6'>June</option>
+                                    <option value='7'>July</option>
+                                    <option value='8'>August</option>
+                                    <option value='9'>September</option>
+                                    <option value='10'>October</option>
+                                    <option value='11'>November</option>
+                                    <option value='12'>December</option>
+                                </select>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
 
                 <h3>Chart</h3>
 
