Dynamic displaying multiple charts. Filter extended with selecting displayed lines. Added ':' to year and date field in dataentry.

--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -14,7 +14,7 @@
 
                     <input type='hidden' id='static_location' value='{{location}}'>
                     <div class='control-group'>
-                        <label class='control-label'>Year</label>
+                        <label class='control-label'>Year:</label>
                         <div class='controls'>
                             <select id='static_year'>
                                 <option value=''>--Select Year--</option>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class='control-group'>
-                        <label class='control-label'>Month</label>
+                        <label class='control-label'>Month:</label>
                         <div class='controls'>
                             <select id='static_month'>
                                 <option value=''>--Select Month--</option>
