--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -10,7 +10,7 @@
                     <fieldset>
         
                         <div class='control-group'>
-                            <label class='control-label'>Start Date</label>
+                            <label class='control-label'>Start Date:</label>
                             <div class='controls'>
                                 <select id='start_year'>
                                     <option value=''>--Select Year--</option>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class='control-group'>
-                            <label class='control-label'>End Date</label>
+                            <label class='control-label'>End Date:</label>
                             <div class='controls'>
                                 <select id='end_year'>
                                     <option value=''>--Select Year--</option>
@@ -73,6 +73,33 @@
                                 </select>
                             </div>
                         </div>
+                        <div class='control-group'>
+                            <label class='control-label'>Chart Type:</label>
+                            <div class='controls'>
+                                <select id='chart_type'>
+                                    <option value='Line'>Line</option>
+                                    <option value='Bar'>Bar</option>
+                                    <option value='Pie'>Pie</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class='control-group'>
+                            <label class='control-label'>Display:</label>
+                            <div class='controls'>
+                                {{#each tags}}
+                                    <input type="checkbox" id="{{this}}" value="1" checked> {{this}}
+                                {{/each}}
+                            </div>
+                        </div>
+
+                        <div class='control-group'>
+                            <div class='controls'>
+                                <button class="btn btn-primary submit">
+                                    <i class="icon-user icon-white"></i> Submit
+                                </button>
+                            </div>
+                        </div>
+                    
                     </fieldset>
                 </form>
 
