Pie graphs start, not finished

--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -99,15 +99,14 @@
                                 </button>
                             </div>
                         </div>
-                    
+
                     </fieldset>
                 </form>
 
                 <h3>Chart</h3>
 
-                <div class="chartDisplay">
-                    <canvas class="chart" id="chart" width="800px" height="300px"></canvas>
-                </div>
+                <div class="chartDisplay"></div>
+                {{charts}}
             </header>
         </div>
     </div>
