Pie chart fully working. CSS added for the pie display.

--- a/client/views/revenues/revenues.html
+++ b/client/views/revenues/revenues.html
@@ -1,5 +1,5 @@
 <template name='revenues'>
-	 <div class="wrapper">
+	 <div class="wrapper revenues">
         <div class="container">
             <header class="hero-unit">
                 <h1>Revenues page!</h1>
@@ -105,8 +105,7 @@
 
                 <h3>Chart</h3>
 
-                <div class="chartDisplay"></div>
-                {{charts}}
+                <div class="chartDisplay" id="chartDisplay"></div>
 
             </header>
         </div>
