--- a/client/stylesheets/overall.css
+++ b/client/stylesheets/overall.css
@@ -96,3 +96,15 @@ height: 4em;
   clear:both;
   padding-top:20px;
 } 
+
+
+/*
+ * Chart display
+ */
+.chartDisplay {
+  display:inline-block;
+}
+.chartDisplay .pie {
+  text-align:center;
+  float:left;
+}
