--- a/client/stylesheets/pages.css
+++ b/client/stylesheets/pages.css
@@ -69,3 +69,43 @@
 .profilePage .profileTable .field {
   width:200px;
 }
+
+/*
+ * Forms List Page
+ */
+.formsList {}
+.formsList .table {
+  width:100%;
+  height:100%;
+}
+.formsList .table .row {
+  width:100%;
+  min-height:1px;
+  height:auto;
+  margin:0;
+}
+.formsList .table .row .cell {
+  float:left;
+  margin:0;
+  padding:0;
+  width:20%;      /* 100% defided by amount of cells */
+}
+.formsList .table .row.body {
+  border-bottom:solid 1px;
+  border-top:solid 1px;
+  border-color:#dddddd;
+  padding-top:5px;
+  padding-bottom:5px;
+}
+.formsList .table .row .cell .status.incomplete {
+  width:150px;
+  max-width:100%;
+  height:100%;
+  background-color:red;
+}
+.formsList .table .row .cell .status.complete {
+  width:150px;
+  max-width:100%;
+  height:100%;
+  background-color:green;
+}
