--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -5,112 +5,114 @@
 
             {{initialize}}
 
-            <form class='form-horizontal' onsubmit="return false">
+            <div class="hero-unit">
+                <h1>{{formlabel}}</h1>
 
-                <fieldset>
+                <form class='form-horizontal' action="/forms/{{formid}}">
 
-                    
-                    <legend>{{formlabel}}</legend>
+                    <fieldset>
 
-                    {{#if isLocationBound}}
-                        {{#if isLocalUser}}
-                            <input type='hidden' id='static_location' value='{{userLocation}}'>
-                        {{else}}
-                            <div class='control-group'>
-                                <label class='control-label'>Location:</label>
-                                <div class='controls'>
-                                    <select id='static_location'>
-                                        <option value=''>--Select Location--</option>
-                                        {{#each location}}
-                                            <option value='{{this.id}}'>{{this.name}}</option>
-                                        {{/each}}
-                                    </select>
-                                </div>
-                            </div>
-                        {{/if}}
-                    {{/if}}
-                    <div class='control-group'>
-                        <label class='control-label'>Year:</label>
-                        <div class='controls'>
-                            <select id='static_year'>
-                                <option value=''>--Select Year--</option>
-                                <option value='2008'>2008</option>
-                                <option value='2009'>2009</option>
-                                <option value='2010'>2010</option>
-                                <option value='2011'>2011</option>
-                                <option value='2012'>2012</option>
-                                <option value='2013'>2013</option>
-                                <option value='2014'>2014</option>
-                                <option value='2015'>2015</option>
-                                <option value='2016'>2016</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class='control-group'>
-                        <label class='control-label'>Month:</label>
-                        <div class='controls'>
-                            <select id='static_month'>
-                                <option value=''>--Select Month--</option>
-                                <option value='1'>January</option>
-                                <option value='2'>February</option>
-                                <option value='3'>March</option>
-                                <option value='4'>April</option>
-                                <option value='5'>May</option>
-                                <option value='6'>June</option>
-                                <option value='7'>July</option>
-                                <option value='8'>August</option>
-                                <option value='9'>September</option>
-                                <option value='10'>October</option>
-                                <option value='11'>November</option>
-                                <option value='12'>December</option>
-                            </select>
-                        </div>
-                    </div>
 
-                    {{#each formfields}}
-                        <div class='control-group'>
-                            <label class='control-label'>{{this.label}}:</label>
-                            <div class='controls'>
-
-                                {{#each this.inputs}}
-                                    {{#if isEqual this.type "number"}}
-                                        <div class='input-prepend'>
-                                            <span class='add-on'>{{this.label}}</span>
-                                            <input type='number' id='{{this.name}}' value='{{this.default}}'>
-                                        </div>
-                                    {{/if}}
-                                    {{#if isEqual this.type "dropdown"}}
-                                        <select id='{{this.name}}'>
-                                            <option value=''>{{this.default}}</option>
-                                            {{#each this.values}}
-                                                <option value='{{this}}'>{{this}}</option>
+                        {{#if isLocationBound}}
+                            {{#if isLocalUser}}
+                                <input type='hidden' id='static_location' value='{{userLocation}}'>
+                            {{else}}
+                                <div class='control-group'>
+                                    <label class='control-label'>Location:</label>
+                                    <div class='controls'>
+                                        <select id='static_location'>
+                                            <option value=''>--Select Location--</option>
+                                            {{#each location}}
+                                                <option value='{{this.id}}'>{{this.name}}</option>
                                             {{/each}}
                                         </select>
-                                    {{/if}}
-                                    {{#if isEqual this.type "hidden"}}
-                                        <input type='hidden' id='{{this.name}}' value='{{this.default}}'>
-                                    {{/if}}
-                                    {{#if isEqual this.type "text"}}
-                                        <input type='text' id='{{this.name}}' value='{{this.default}}'>
-                                    {{/if}}
-                                {{/each}}
-
+                                    </div>
+                                </div>
+                            {{/if}}
+                        {{/if}}
+                        <div class='control-group'>
+                            <label class='control-label'>Year:</label>
+                            <div class='controls'>
+                                <select id='static_year' disabled>
+                                    <option value=''>--Select Year--</option>
+                                    <option value='2008'>2008</option>
+                                    <option value='2009'>2009</option>
+                                    <option value='2010'>2010</option>
+                                    <option value='2011'>2011</option>
+                                    <option value='2012'>2012</option>
+                                    <option value='2013'>2013</option>
+                                    <option value='2014'>2014</option>
+                                    <option value='2015'>2015</option>
+                                    <option value='2016'>2016</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class='control-group'>
+                            <label class='control-label'>Month:</label>
+                            <div class='controls'>
+                                <select id='static_month' disabled>
+                                    <option value=''>--Select Month--</option>
+                                    <option value='1'>January</option>
+                                    <option value='2'>February</option>
+                                    <option value='3'>March</option>
+                                    <option value='4'>April</option>
+                                    <option value='5'>May</option>
+                                    <option value='6'>June</option>
+                                    <option value='7'>July</option>
+                                    <option value='8'>August</option>
+                                    <option value='9'>September</option>
+                                    <option value='10'>October</option>
+                                    <option value='11'>November</option>
+                                    <option value='12'>December</option>
+                                </select>
                             </div>
                         </div>
 
-                    {{/each}}
-                    
-                    <div class='control-group'>
-                        <div class='controls'>
-                            <button class="btn btn-primary submit">
-                                <i class="icon-user icon-white"></i> Submit
-                            </button>
+                        {{#each formfields}}
+                            <div class='control-group'>
+                                <label class='control-label'>{{this.label}}:</label>
+                                <div class='controls'>
+
+                                    {{#each this.inputs}}
+                                        {{#if isEqual this.type "number"}}
+                                            <div class='input-prepend'>
+                                                <span class='add-on'>{{this.label}}</span>
+                                                <input type='number' id='{{this.name}}' value='{{this.default}}'>
+                                            </div>
+                                        {{/if}}
+                                        {{#if isEqual this.type "dropdown"}}
+                                            <select id='{{this.name}}'>
+                                                <option value=''>{{this.default}}</option>
+                                                {{#each this.values}}
+                                                    <option value='{{this}}'>{{this}}</option>
+                                                {{/each}}
+                                            </select>
+                                        {{/if}}
+                                        {{#if isEqual this.type "hidden"}}
+                                            <input type='hidden' id='{{this.name}}' value='{{this.default}}'>
+                                        {{/if}}
+                                        {{#if isEqual this.type "text"}}
+                                            <input type='text' id='{{this.name}}' value='{{this.default}}'>
+                                        {{/if}}
+                                    {{/each}}
+
+                                </div>
+                            </div>
+
+                        {{/each}}
+                        
+                        <div class='control-group'>
+                            <div class='controls'>
+                                <button class="btn btn-primary submit">
+                                    <i class="icon-user icon-white"></i> Submit
+                                </button>
+                            </div>
                         </div>
-                    </div>
 
-                </fieldset>
+                    </fieldset>
 
-            </form>
+                </form>
+            </div>
 
         </div>
     </div>
