--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -31,10 +31,10 @@
                 </ul>
               </li>            
               <li class="{{active}} dropdown">
-                <a href="{{pathFor 'formsList'}}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-list-alt"></i> Forms <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-list-alt"></i> Forms <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   {{#each form}}
-                    <li><a href="{{pathFor 'formsList'}}/{{this.id}}">{{this.label}}</a></li>
+                    <li><a href="/forms/{{this.id}}">{{this.label}}</a></li>
                   {{/each}}
                 </ul>
               </li>
