--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -20,7 +20,7 @@
               <li class="{{active}} dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tachometer"></i> Performance<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Moves per manhour</a></li>
+                  <li><a href="{{pathFor 'performance'}}">Moves per manhour</a></li>
                   <li><a href="#">KwH Factor</a></li>
                   <li><a href="#">Synchromodal Factor</a></li>
                   <li><a href="#">Diesel Factor</a></li>
